# owasp-agentic-scanner

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  security_vulnerability.md
.github/workflows/: lint.yml  pypi.yml  release.yml  security.yml  stale.yml  test.yml  type-check.yml
docs/: CICD.md  CONFIG.md  USAGE.md
src/owasp_agentic_scanner/: ast_analyzer.py  baseline.py  cache.py  cli.py  config.py  scanner.py
src/owasp_agentic_scanner/rules/: code_execution_ast.py  privilege_abuse.py
tests/: test_ast_analyzer.py
tests/integration/: test_cli.py  test_end_to_end.py
tests/unit/: test_privilege_abuse_helpers.py  test_scanner.py
